test/testdata/variables/undeclared_access_error_local_declared_after_access.lox
{
  // error: 'x' has not been declared
  // lint warning: 'x' has been used before its declaration
  x = 1;
  var x;
}
